--- a/style.css
+++ b/style.css
@@ -4,15 +4,15 @@
     text-align: center;
     max-width: 220px;
     justify-content: center;
-    border: solid black;
+    border: solid #C2BAB5;
     border-width: 2px;
     border-radius: 5px;
-    background-color: darkgray;
+    background-color: #ede7e3;
     padding: 8px;
 }
 
 .display {
-    background-color: #ddd;
+    background-color: #f8f9fa;
     border-width: 1px;
     margin: 2px;
     height: 40px;
@@ -20,9 +20,9 @@
     align-items: center;
     justify-content: flex-end;
     padding: 0px 8px;
-    border: solid black;
+    border: solid #C2BAB5;
     border-radius: 4px;
-    border-width: 1px;
+    border-width: 2px;
     margin-bottom: 8px;
 }
 
@@ -43,5 +43,30 @@ button {
     margin: 2px;
     border-radius: 4px;
     border-width: 1px;
-    border-color: black;
+    border-right: none;
+    border-top: none;
+    font-size: 16px;
+    border-left: solid #C2BAB5;
+    border-bottom: solid #C2BAB5;
+}
+
+#equals {
+    background-color: #ffa62b;
+}
+
+.operand {
+    background-color: #82C0CC;
+}
+
+.alteration {
+    background-color: #489FB5;
+}
+
+.clear {
+    background-color: #16697a;
+    color: white;
+}
+
+.number {
+    background-color: #f8f9fa;
 }
